# cppws

autotools/: hw.tar.bz2
autotools/boilerplate-boost/: Makefile  Makefile.am  Makefile.in  config.status  configure.ac  hw  libtool
autotools/hw/: .project  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.in  core
autotools/prime_finder/: .cproject  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  fixture.yaml  fixture_comp  hw  main.cpp  test
autotools/prime_finder/.deps/: ChunkFactory.Po  Finder.Po  fixture_comp-Chunk.Po  fixture_comp-ChunkFactory.Po  fixture_comp-Finder.Po  fixture_comp-main.Po  hw-Chunk.Po  hw-ChunkFactory.Po  hw-Finder.Po  hw-main.Po  hw-test.Po  test-Chunk.Po  test-ChunkFactory.Po  test-Finder.Po  test-main.Po  test.Po
autotools/prime_finder/autom4te.cache/: output.1  traces.0  traces.1
autotools/prime_finder/nbproject/: configurations.xml  project.xml
autotools/prime_finder/nbproject/private/: Default.properties
autotools/prime_finder/src/fixture-comp/: main.cpp
autotools/prime_finder/src/prime-finder/: Chunk.h  ChunkFactory.h  main.cpp  test.cpp
autotools/prime_finder/src/test/: main.cpp
boost/scoped_ptr/: Rakefile  boost_scoped_ptr_hw
bsd_socket/boilerplate_client/: simple_client
bsd_socket/em_client/: Rakefile  core  em_client
gtest/: Makefile  Makefile.am  Makefile.in  config.status  configure  hw
gtest/.deps/: hw-main.Po  hw-main_test.Po  main.Po  main_test.Po
gtest/autom4te.cache/: traces.0  traces.1  (+1 more)
helloworld/: hello  main.cpp
socket/: Rakefile
(+44 files in other folders)
